snapshots/syntax/library/statements/write/write_in_do_loop.snap
---
source: src/syntax/library/statements/file_operations/write.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: DoStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: DoKeyword
                  text: Do
                - kind: Whitespace
                  text: " "
                - kind: UntilKeyword
                  text: Until
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: EOF
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "1"
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: WriteStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: WriteKeyword
                          text: Write
                        - kind: Whitespace
                          text: " "
                        - kind: Octothorpe
                          text: "#"
                        - kind: IntegerLiteral
                          text: "2"
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Identifier
                          text: currentRecord
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: LoopKeyword
                  text: Loop
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
